# Dzrs

./: .eslintrc.json  .gitignore  .prettierrc  LICENSE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: main.yml
src/: App.vue  appConfig.js  globals.js  helpers.js  main.js  router.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  helpers.rs  main.rs  slavart_api.rs
src-tauri/src/libs/: discord.rs  mod.rs
src-tauri/src/models/: discord.rs  dzrs_files.rs  dzrs_tracks.rs  dzrs_types.rs  mod.rs  slavart.rs  slavart_api.rs  watcher_file.rs
src-tauri/src/types/: files.rs  mod.rs  slavart.rs  tags.rs
src/components/: DownloadInfoItem.vue  Greet.vue  HeaderBar.vue  InstantNotifications.vue  Notifications.vue  SettingsGroup.vue  SlavartDownloadItem.vue  TableFilter.vue
src/pages/: About.vue  Download.vue  Main.vue  Settings.vue
