[package]
name = "Dzrs"
version = "0.0.1"
description = "A Tauri App"
authors = ["Guido30"]
license = ""
repository = "https://github.com/Guido30/Dzrs.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all",
    "dialog-all",
    "clipboard-all",
    "shell-open",
    "dialog",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.18"
chrono = "0.4.26"

[features]
custom-protocol = ["tauri/custom-protocol"]
