[package]
name = "dzrs"
version = "0.0.1"
description = "A music downloader and tagger using deezer and slavart"
authors = ["Guido30"]
license = ""
repository = "https://github.com/Guido30/Dzrs.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "path-all",
    "dialog-all",
    "clipboard-all",
    "shell-open",
    "dialog",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.18"
chrono = "0.4.26"
notify = "6.1.1"
lofty = "0.15.0"
deezerapi-rs = { path = "../../deezerapi-rs" }

[features]
custom-protocol = ["tauri/custom-protocol"]
